[build-system]
requires=["hatchling"]
build-backend="hatchling.build"

[project]
name="yass"
description="Yet Another Simple Scraper"
requires-python=">=3.11"
authors=[
    {name="Danchuk Ivan", email="ivan.s.danchuk@gmail.com"},
    {name="Ivan Danchuk", email="ivan.s.danchuk@gmail.com"},
    {name="Your Name", email="you@example.com"},
]
maintainers=[{name="Danchuk Ivan", email="ivan.s.danchuk@gmail.com"}]
keywords=[
    "scraping",
    "web scraping",
    "asyncio",
    "web crawler",
    "api crawler",
    "api scraping",
]
classifiers=[
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]
version="0.1.0a1"
dependencies=[
    "aiohttp<4.0.0,>=3.9.3",
    "aioitertools<1.0.0,>=0.11.0",
    "asyncio",
    "beartype<1.0.0,>=0.16.4",
    "dotted-dict<2.0.0,>=1.1.3",
    "fsspec<2024.0.0,>=2023.12.2",
    "more-itertools",
    "morefs[asynclocal]<1.0.0,>=0.1.2",
    "openpyxl<4.0.0,>=3.1.2",
    "pandas[pyarrow]>=2.2.0",
    "polars[pyarrow]<1.0.0,>=0.19.0",
    "regex<2024.0.0,>=2023.12.25",
    "s3fs<2024.0.0,>=2023.12.2",
    "uvloop; platform_system == \"Linux\"",
    "yarl<2.0.0,>=1.9.4",
]
readme="README.md"

[project.license]
text="Apache 2.0"

[tool.pdm]
distribution=true

[tool.pdm.dev-dependencies]
hook=["pre-commit<4.0.0,>=3.6.0"]
dev=["dynaconf"]
doc=["mkdocs-material>=9.5.9", "mkdocstrings[python]>=0.24.0"]
test=["pytest", "pytest-mock", "pytest-playwright"]

[tool.pdm.build]
includes=[]
